test/fail_compilation/fail7294.d
// 7294

Object foo()
{
    scope obj = new Object;
    return obj;
}


